# melon_player

./: .gitignore  CONTRIBUTING.md  README.md
doc/: Evaluation.md
plan/: feedback.md
src/: CMakeLists.txt  README.md
src/qss/: mainwid.css
src/src/: main.cpp  main_window.cpp  main_window.h  main_window.ui
src/src/meta_editor/: meta_editor.cpp  meta_editor.hpp  meta_editor.ui  metadata.hpp
src/src/player/: common.h  media_process.h  player.cpp  player.hpp
src/src/playlist_backup/: playlist_backup.cpp  playlist_backup.hpp
unit-test/: CMakeLists.txt  CTestTestfile.cmake  test.cpp  test1
